Parents can fill forms multiple times

--- a/app/views/daycares/guardian_dashboard.html.haml
+++ b/app/views/daycares/guardian_dashboard.html.haml
@@ -93,9 +93,12 @@
           .card-body
             %ul.list-group.list-group-flush.mb-3
               - current_user.viewable_forms.last(8).each do |form|
-                - entered_form = current_user.entered_forms.find_by(form_id: form.id)
-                - if entered_form.present?
-                  %li.list-group-item= link_to form.title, [@daycare, entered_form]
+                - entered_forms = current_user.entered_forms.where(form_id: form.id)
+                - if entered_forms.present?
+                  %li.list-group-item=  link_to "#{form.title}: Fill again", new_daycare_entered_form_path(daycare_id: @daycare.id, form_id: form.id)
+                  - entered_forms.each do |entered_form|
+                    %li.list-group-item
+                      = link_to "#{form.title}: #{entered_form.created_at.strftime("%b %d, %Y: %l:%M:%S%P %Z")}}", [@daycare, entered_form]
                 - else
                   %li.list-group-item= link_to form.title, new_daycare_entered_form_path(daycare_id: @daycare.id, form_id: form.id)
                 
