30 Checkbox & File entered form field types work https://github.com/gdesplin/teensybit/issues/30 Also text types show

--- a/app/views/entered_form_fields/_time.html.haml
+++ b/app/views/entered_form_fields/_time.html.haml
@@ -1,2 +1,2 @@
-= entered_form_fields_form.input :entered_datetime, label: false,
-  data: { controller: "flatpickr", flatpickr_date_format: "H:i", noCalendar: true, enableTime: true } 
+= entered_form_fields_form.text_field :entered_datetime, label: false,
+  data: { controller: "flatpickr", flatpickr_date_format: "H:i", no_calendar: true, enable_time: true } 
