--- a/app/views/entered_form_fields/_check_boxes.html.haml
+++ b/app/views/entered_form_fields/_check_boxes.html.haml
@@ -1,2 +1,2 @@
-= entered_form_fields_form.input :entered_string, as: :check_boxes,
+= entered_form_fields_form.input :entered_array, as: :check_boxes,
   collection: entered_form_fields_form.object.form_field.form_field_options, label: false, value_method: :name
