--- a/app/views/entered_form_fields/_datetime.html.haml
+++ b/app/views/entered_form_fields/_datetime.html.haml
@@ -1,2 +1,2 @@
 = entered_form_fields_form.text_field :entered_datetime, label: false,
-  { data: { controller: "flatpickr", flatpickr_date_format: "Y-m-d H:i"} }
+  data: { controller: "flatpickr", flatpickr_date_format: "Y-m-d H:i", enable_time: true }
