--- a/app/javascript/src/stylesheets/application.scss
+++ b/app/javascript/src/stylesheets/application.scss
@@ -14,36 +14,42 @@ $warning: #eee845;
 // messages
 
 .chat-messages {
-    display: flex;
-    flex-direction: column;
-    max-height: 800px;
-    overflow-y: scroll
+  display: flex;
+  flex-direction: column;
+  max-height: 800px;
+  overflow-y: scroll
 }
 
 .chat-message-left,
 .chat-message-right {
-    display: flex;
-    flex-shrink: 0
+  display: flex;
+  flex-shrink: 0
 }
 
 .chat-message-left {
-    margin-right: auto
+  margin-right: auto
 }
 
 .chat-message-right {
-    flex-direction: row-reverse;
-    margin-left: auto
+  flex-direction: row-reverse;
+  margin-left: auto
 }
 
 .flex-grow-0 {
-    flex-grow: 0!important;
+  flex-grow: 0!important;
 }
 .border-top {
-    border-top: 1px solid #dee2e6!important;
+  border-top: 1px solid #dee2e6!important;
 }
 
 legend {
-    float: none;
+  float: none;
 }
 
 // end messages
+
+.btn-save-progress {
+  position: fixed;
+  bottom: 2rem;
+  right: 2rem;
+}
