--- a/app/views/forms/edit.html.haml
+++ b/app/views/forms/edit.html.haml
@@ -1,1 +1,3 @@
-= render partial: "form", locals: { form: @form, daycare: @daycare }
+.container
+  %h1 Edit Form
+  = render partial: "form", locals: { form: @form, daycare: @daycare }
