--- a/app/views/forms/new.html.haml
+++ b/app/views/forms/new.html.haml
@@ -1,1 +1,3 @@
-= render partial: "form", locals: { form: @form, daycare: @daycare }
+.container
+  %h1 New Form
+  = render partial: "form", locals: { form: @form, daycare: @daycare }
