Allow promotion codes Removal of Beta language & other innacurate text

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,7 +1,7 @@
 %section#home-top-cover.cover-container.d-flex.w-100.h-100.py-5.text-center.mx-auto.flex-column.mb-5
   .row.py-lg-5
     .col-lg-6.col-md-8.mx-auto.light-grey-transparent.px-3.py-5.rounded
-      %h1.fw-light.text-white Teensy Bit (beta)
+      %h1.fw-light.text-white Teensy Bit
       %p.lead.text-light Replaces your hodge-podge of online tools to run your in home daycare.
       %p
         = link_to "Start Free Trial", "/#pricing", { class: "btn btn-danger text-light"}
@@ -44,7 +44,7 @@
           %h2.featurette-heading
             Auto Payments.
             %span.text-muted Keep your bank account full.
-          %p.lead Never have a missed or late payment again. You will be able to set all your parents up on an automatic daycare payment schedule that will save you time and ensure you get your hard earned dollars into your account. If auto payments aren't for you, then we will send invoices for you, and reminders via many communication channels to ensure you get your payments.
+          %p.lead Never have a missed or late payment again. You will be able to set all your parents up on an automatic daycare payment schedule that will save you time and ensure you get your hard earned dollars into your account.
           .w-100.mb-3.btn.btn-lg-btn-primary= link_to "Get Auto-Payments", "/#pricing"
         .col-md-5.xl-font.d-inline-flex.align-items-center.justify-content-center
           = image_pack_tag("paying-online.jpg", class: "img-fluid featurette-image mx-auto")
@@ -64,7 +64,7 @@
               %h2.featurette-heading
                 Photo & file sharing.
                 %span.text-muted Easy for you, and parents love it!
-              %p.lead Take a photo, tag the kids in it, done. Its now automatically shared and available to the parents it may concern. Do this with any document or text you may need to share with parents. Easy, simple and saves you time and makes parents happy!
+              %p.lead Take a photo, tag the kids in it, done. Its now automatically shared and available to the parents it may concern. Do this with any document you may need to share with parents. Easy, simple and saves you time and makes parents happy!
               .w-100.mb-3.btn.btn-lg-btn-primary= link_to " Get Photo & File Sharing", "/#pricing"
             .col-md-5.xl-font.d-inline-flex.align-items-center.justify-content-center
               = image_pack_tag("kid-taking-photo.jpg", class: "img-fluid featurette-image mx-auto")
@@ -74,7 +74,7 @@
                 %h2.featurette-heading
                   Messaging.
                   %span.text-muted Broadcast, instant message and report.
-                %p.lead Often you need to message all your parents in your daycare, or a select group of them. This makes it easy to message them via email, text or in-app messages. Report on important events that happen, like when they took a bottle or napped. All in one place. Easy.
+                %p.lead Often you need to message all your parents in your daycare, or a select group of them. This makes it easy to message them via email and in-app messages. Report on important events that happen, like when they took a bottle or napped. All in one place. Easy.
                 .w-100.mb-3.btn.btn-lg-btn-primary= link_to "Get Messaging", "/#pricing"
               .col-md-5.xl-font.d-inline-flex.align-items-center.justify-content-center.order-md-1
                 = image_pack_tag("messaging.jpg", class: "img-fluid featurette-image mx-auto")
